@@ -1,3 +1,3 @@
 ops
-git+https://github.com/omnivector-solutions/slurm-ops-manager.git@0.7.3
+git+https://github.com/omnivector-solutions/slurm-ops-manager.git@0.7.4
 git+https://github.com/omnivector-solutions/interface-nrpe-external-master.git@master
